--- a/src/Components/ProductList/ProductList.css
+++ b/src/Components/ProductList/ProductList.css
@@ -1,72 +1,111 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .container {
-    max-width: 800px;
-    margin: 0 auto;
-  }
-  
-  h1 {
-    text-align: center;
-    color: #333;
-  }
-  
-  ul {
-    list-style: none;
-    padding: 0;
-  }
-  
+  body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+h1 {
+  text-align: center;
+  color: #333;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  cursor: pointer;
+  padding: 10px;
+  border: 1px solid #ccc;
+  margin-bottom: 5px;
+  background-color: #f9f9f9;
+  transition: background-color 0.3s ease;
+}
+
+li:hover {
+  background-color: #e0e0e0;
+}
+
+.product-detail {
+  margin-top: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+}
+
+.basket {
+  margin-top: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+}
+
+.basket h2 {
+  color: #333;
+}
+
+.basket ul {
+  padding: 0;
+}
+
+.basket li {
+  list-style: none;
+  margin-bottom: 5px;
+}
+
+.error {
+  color: red;
+  font-weight: bold;
+}
+
+.no-products {
+  text-align: center;
+  color: #777;
+}
+
+
+.search-bar-container {
+  text-align: center;
+  margin: 20px 0;
+}
+
+.title {
+  text-align: center;
+  margin: 20px 0;
+}
+
+
+li {
+  display: flex;
+  justify-content: space-between;
+}
+
+button {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 5px;
+  cursor: pointer;
+}
+
+/* Adjust styles for smaller screens */
+@media only screen and (max-width: 600px) {
   li {
-    cursor: pointer;
-    padding: 10px;
-    border: 1px solid #ccc;
-    margin-bottom: 5px;
-    background-color: #f9f9f9;
-    transition: background-color 0.3s ease;
+    flex-direction: column;
   }
-  
-  li:hover {
-    background-color: #e0e0e0;
+
+  button {
+    margin-top: 10px;
   }
-  
-  .product-detail {
-    margin-top: 20px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    background-color: #f9f9f9;
-  }
-  
-  .basket {
-    margin-top: 20px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    background-color: #f9f9f9;
-  }
-  
-  .basket h2 {
-    color: #333;
-  }
-  
-  .basket ul {
-    padding: 0;
-  }
-  
-  .basket li {
-    list-style: none;
-    margin-bottom: 5px;
-  }
-  
-  .error {
-    color: red;
-    font-weight: bold;
-  }
-  
-  .no-products {
-    text-align: center;
-    color: #777;
-  }
-  
-  
+}
