updating logic on navbar

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -9,8 +9,8 @@
 }
 
 .jss507 {
-  max-width: 80px; /* Adjust the value to your desired width */
-  height: auto; /* Maintain the aspect ratio */
+  max-width: 80px; 
+  height: auto; 
 }
 
 .nav-list {
