--- a/src/Components/ProductList/ProductList.css
+++ b/src/Components/ProductList/ProductList.css
@@ -87,7 +87,7 @@ li {
 }
 
 button {
-  background-color: #4caf50;
+  background-color: #4c60af;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -97,6 +97,7 @@ button {
   font-size: 16px;
   margin-top: 5px;
   cursor: pointer;
+  border-radius: 5%;
 }
 
 /* Adjust styles for smaller screens */
